syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/Arturyus92/chat-server;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message ChatInfo {
  repeated string usernames = 1;
  string title = 2;
}

message CreateRequest {
  ChatInfo chatInfo = 1;
}

message CreateResponse {
  int64 id = 1;
}

message MessageInfo {
  int64 from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp =3;
  int64 chatId = 4;
}

message SendMessageRequest {
  MessageInfo messageInfo = 1;
}

message DeleteRequest {
  int64 id = 1;
}
